Issue: #529 Fix: (shift) Enter/ Tab causes second focus rect. Fix: Enter, Tab and Escape are not working inside opened CellEditor.

--- a/src/main/components/table/UITable.scss
+++ b/src/main/components/table/UITable.scss
@@ -149,7 +149,7 @@
                 width: 100%;
             }
 
-            &.p-selectable-row.p-highlight > td.p-selectable-cell.p-highlight, &.p-selectable-row.p-highlight > td.p-selectable-cell:focus {
+            &.p-selectable-row.p-highlight > td.p-selectable-cell.p-highlight/*, &.p-selectable-row.p-highlight > td.p-selectable-cell:focus*/ {
                 outline: none;
                 outline-offset: 0;
                 box-shadow: inset 0 0 0 2px #7f7f7f;
